fixed a few bugs on IE9 : Slider bar 100% was taking all the width of the screen overflow: scroll was showing scrollbars everywhere

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -12,8 +12,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
+    overflow: auto;
     padding-bottom: $font-size--huge;
     @include breakpoint(map-get($break, medium))  {
         width: 50%;
@@ -23,8 +22,7 @@
 
 // Basic panel layout
 %panel {
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
+    overflow: auto;
     position: relative;
     width: 100%;
     height: 100vh;
