--- a/scss/modules/_indicators.scss
+++ b/scss/modules/_indicators.scss
@@ -24,7 +24,7 @@
 .indicator-slider {
 	position: fixed;
 	top: 0%;
-	width: 100%;
+	width: $font-size--x-small; // can't take 100% on older browser on a fixed element
 	height: 0%;
 	background-color: $light-gray;
 }
